--- a/std/studtests/templates/studtests/apis.html
+++ b/std/studtests/templates/studtests/apis.html
@@ -10,5 +10,7 @@
 <a href="/api/v1/choices/?format=xml">Ответы</a><br>
 <a href="/api/v1/testresults/?format=xml">Результаты</a><br>
 <a href="/api/v1/imquestions/?format=xml">Вопросы с изображением</a><br>
+<a href="/api/v1/interviews/?format=xml">Опросы</a><br>
+<a href="/api/v1/interview_choices/?format=xml">Варианты ответов опросов</a><br>
 </div>
 {% endblock %}
