--- a/HelixTest(Android)/app/src/main/res/layout/activity_create.xml
+++ b/HelixTest(Android)/app/src/main/res/layout/activity_create.xml
@@ -4,6 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
     tools:context="com.mike.myapplication.CreateActivity">
 
     <EditText
