--- a/HelixTest(Android)/app/src/main/res/layout/activity_login.xml
+++ b/HelixTest(Android)/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
     tools:context="com.mike.myapplication.LoginActivity">
 
     <TextView
@@ -22,7 +24,8 @@
         android:id="@+id/editText2"
         android:width="120dp"
         android:layout_below="@+id/login"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:hint="Login" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -34,7 +37,8 @@
         android:layout_alignLeft="@+id/editText2"
         android:layout_alignStart="@+id/editText2"
         android:layout_alignRight="@+id/editText2"
-        android:layout_alignEnd="@+id/editText2" />
+        android:layout_alignEnd="@+id/editText2"
+        android:hint="Password" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -61,7 +65,7 @@
         android:text="Настройки"
         android:id="@+id/button3"
         android:onClick="settings_"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/enter"
         android:layout_alignRight="@+id/editText3"
         android:layout_alignEnd="@+id/editText3" />
 </RelativeLayout>
