--- a/std/loginsys/templates/loginsys/action.html
+++ b/std/loginsys/templates/loginsys/action.html
@@ -5,7 +5,7 @@
     <form action="/auth/action/" method="post">
     {% csrf_token %}
          <input class="button radius expand success" type="submit" name="teacher" id="teacher" value="Я учитель">
-         <input class="button radius expand success" type="submit" name="student" id="student" value="Я студент">
+         <input class="button radius expand success" type="submit" name="student" id="student" value="Я ученик">
     </form>
 </div>
 {% endblock %}
