--- a/std/studtests/templates/studtests/base.html
+++ b/std/studtests/templates/studtests/base.html
@@ -23,8 +23,9 @@
 
 <html>
 <head lang="en">
+    <link rel="shortcut icon" href="{% static "studtests/images/icons/lit144.png" %}" type="image/x-icon">
     <meta charset="UTF-8">
-    <title>School tests</title>
+    <title>Helix Test</title>
 </head>
 <body>
 <nav class="top-bar" data-topbar role="navigation">
