--- a/std/studtests/templates/studtests/detail.html
+++ b/std/studtests/templates/studtests/detail.html
@@ -35,7 +35,7 @@
 {% endif %}
 {% csrf_token %}
 
-<div id="center1" style="margin-left: 0%">
+<div id="center1" style="margin-left: 0%; ">
 <table width="30%">
 <tr><td>Вопрос</td><td>Варианты ответа</td></tr>
 {% for question in questions %}
