--- a/HelixTest(Android)/app/src/main/res/layout/findactivity.xml
+++ b/HelixTest(Android)/app/src/main/res/layout/findactivity.xml
@@ -8,9 +8,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editText"
-        android:layout_marginBottom="172dp"
         android:width="200dp"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true" />
 
     <Button
@@ -19,9 +18,13 @@
         android:text="Поиск"
         android:id="@+id/button"
         android:layout_marginTop="71dp"
+        android:background="#436EEE"
         android:layout_alignTop="@+id/editText"
-        android:layout_centerHorizontal="true"
-        android:onClick="find" />
+        android:onClick="find"
+        android:layout_alignRight="@+id/textView"
+        android:layout_alignEnd="@+id/textView"
+        android:layout_alignLeft="@+id/textView"
+        android:layout_alignStart="@+id/textView" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -29,6 +32,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Введи группу"
         android:id="@+id/textView"
-        android:layout_above="@+id/editText"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="127dp" />
 </RelativeLayout>
